Changes for 2.3.2

New features:
A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBX-8053] changed label "Latest data" to "Monitoring" in host inventory view (Ivo)
..F....... [ZBX-8333] renamed screen item add, update and delete messages (Ivo)
..F....... [ZBX-8197] fixed all data not being shown on graph if period is set to or more than 2 years (Krists)
..F....... [ZBX-8330] fixed bug with grouped buttons in discovery rules for SNMP checks (Andrejs)
..F....... [ZBX-8318] added "d. m. Y" date format to recognized formats in frontend and set "Y-m-d H:i:s" as fallback (Krists)
..F....... [ZBXNEXT-2124] fixed submap problem count calculation in Monitoring / Maps when application filters are active (Krists)
..F....... [ZBX-8301] restricted "unique" attribute to Zabbix agent & SNMP checks in discovery rule creation (Andrejs)
.......PS. [ZBX-8095] fixed a bug in item queue that updated item's nextcheck but not its position in the queue (asaveljevs)
...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)
.......PS. [ZBX-8325] fixed crash with Oracle when inserting large number of records (wiper)
........S. [ZBX-8336] fixed server crash with value cache is working in low memory mode (wiper)
...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
....I..... [ZBX-8306] added Percona database support when compiling with --with-mysql configuration option (wiper)
.......PS. [ZBX-8287] added truncating of long text values to maximum field length before inserting into database (Andris)
........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)